--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <p>normal text</p>
+    <img src="https://www.dexigner.com/images/directory/xxi/4892.jpg>
     <div id="root"></div>
 </body>
 </html>
