--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p>normal text</p>
-    <img src="./.Methodology.PNG">
+    <img src="./.assets/Methodology.PNG">
     <div id="root"></div>
 </body>
 </html>
