--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!-- <meta name="google-site-verification" content="xxxxxxxxxxxxx-xxxxxxxxxxxxxxxxx-xxxxxxxxxxx" /> -->
 </head>
 <body>
-    <p>normal text</p>
-    <img src="./.assets/Methodology.PNG">
+    <p>normal text</>
+    <img src="./Methodology.PNG">
     <div id="root"></div>
 </body>
 </html>
